--- a/pages/home/home.wxml
+++ b/pages/home/home.wxml
@@ -1,11 +1,3 @@
 <view>
-    <button class="weui-btn weui-btn_primary">
-        主操作
-    </button>
-    <button class="weui-btn weui-btn_primary weui-btn_loading">
-        <i class="weui-loading"></i>加载中
-    </button>
-    <button class="weui-btn weui-btn_primary weui-btn_disabled">
-        禁用状态
-    </button>
+    <image src="https://picsum.photos/200" style="height: 375rpx; width: 375rpx;"></image>
 </view>
