+home.wxml页面显示轮播图

--- a/pages/home/home.wxml
+++ b/pages/home/home.wxml
@@ -1,3 +1,17 @@
+<!-- 图片轮播 -->
 <view>
-    <image src="https://picsum.photos/200" style="height: 375rpx; width: 375rpx;"></image>
+    <swiper
+        indicator-dots="{{true}}"
+        autoplay="{{true}}"
+        style="width: 750rpx;">
+        <swiper-item>
+            <image src="https://picsum.photos/200"></image>
+        </swiper-item>
+        <swiper-item>
+            <image src="https://picsum.photos/250"></image>
+        </swiper-item>
+        <swiper-item>
+            <image src="https://picsum.photos/300"></image>
+        </swiper-item>
+    </swiper>
 </view>
