+演示数据绑定

--- a/pages/home/home.wxml
+++ b/pages/home/home.wxml
@@ -1,17 +1,4 @@
-<!-- 图片轮播 -->
+<!-- 数据绑定演示 -->
 <view>
-    <swiper
-        indicator-dots="{{true}}"
-        autoplay="{{true}}"
-        style="width: 750rpx;">
-        <swiper-item>
-            <image src="https://picsum.photos/200"></image>
-        </swiper-item>
-        <swiper-item>
-            <image src="https://picsum.photos/250"></image>
-        </swiper-item>
-        <swiper-item>
-            <image src="https://picsum.photos/300"></image>
-        </swiper-item>
-    </swiper>
+    <text class="title">Hello {{name}}</text>
 </view>
