--- a/pages/home/home.wxml
+++ b/pages/home/home.wxml
@@ -1,4 +1,5 @@
 <!-- 数据绑定演示 -->
 <view>
-    <text class="title">Hello {{name}}</text>
+    <!-- <text class="title">Hello {{name}}</text> -->
+    <text class="title">现在是 {{now}}</text>
 </view>
