--- a/pages/home/home.wxml
+++ b/pages/home/home.wxml
@@ -1,5 +1,12 @@
-<!-- getUserInfo, getUserProfile接口也弃用了 -->
+<!-- 只剩下头像昵称填写功能了 -->
 <view>
-    <text class="title">hello {{userInfo.nickName}} </text>
-    <button open-type="getUserInfo" bindgetuserinfo="getUserInfo">授权获取用户信息</button>
+    <button class="avatar-wrapper" open-type="chooseAvatar" bind:chooseavatar="onChooseAvatar">
+        <image class="avatar" src="{{avatarUrl}}"></image>
+    </button>
+    <form catchsubmit="onSubmit">
+        <view class="row">
+            <input type="nickname" class="input weui-input" placeholder="请输入昵称" />
+        </view>
+        <button type="primary" class="submit-btn" form-type="submit">提交</button>
+    </form>
 </view>
