--- a/pages/home/home.wxss
+++ b/pages/home/home.wxss
@@ -11,13 +11,35 @@ page {
     /* 页面一级子元素view垂直居中 */
 }
 
-text {
-    font-size: 24pt;
-    color: blue;
+.avatar-wrapper {
+    padding: 0;
+    width: 56px !important;
+    border-radius: 8px;
+    margin-top: 40px;
+    margin-bottom: 40px;
+    background-color: #fff;
 }
 
-input {
-    border: 1px solid black;
-    margin: 60rpx auto;
-    padding: 20rpx;
+.avatar {
+    display: block;  
+    width: 56px;
+    height: 56px;
+}
+.row {
+    border-top: 1px solid #f6f6f6;
+    border-bottom: 1px solid #f6f6f6;
+    padding-left: 20rpx;
+    height: 80rpx;
+    align-items: center;
+    display: flex;
+}
+.input {
+    flex:2;
+}
+.weui-input {
+    flex: 6;
+}
+
+.submit-btn {
+    margin-top: 40rpx;
 }
